--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         integrity="sha256-Dul4c09cdrWKXVtallPxF558lwxMwCC8dXJdZ0PVW54=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
-        var socket = io.connect("http://localhost:3000");
+        var socket = io.connect("https://demo-vbi.herokuapp.com");
 
         function filter() {
             var region = $("#region").val();
