--- a/qr.html
+++ b/qr.html
@@ -8,13 +8,13 @@
     <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
     <script>
         $(document).ready(function () {
-            var socket = io.connect("http://localhost:3000");
+            var socket = io.connect("https://demo-vbi.herokuapp.com");
             socket.on('postMessageToQR', function (data) {
                 console.log(data);
             });
 
             var token = '12345';
-            var remotePageUrl =  "http://localhost:3000/?token=" + token;
+            var remotePageUrl =  "https://demo-vbi.herokuapp.com/?token=" + token;
             var qrcode = new QRCode("qrcode");
             qrcode.makeCode(remotePageUrl);
         });
