--- a/qr.html
+++ b/qr.html
@@ -12,7 +12,7 @@
             socket.on('postMessageToQR', function (data) {
                 console.log(data);
                 if (window && window.top && window.top.postMessage)
-                    window.top.postMessage(data, "bocloud.visualbi.com");
+                    window.top.postMessage(data, "*");
             });
 
             var token = '12345';
